<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="24dp" android:background="@color/screen_background">
    <CheckBox android:id="@+id/setting_haptic" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="56dp"
        android:text="@string/setting_haptic" />
    <CheckBox android:id="@+id/setting_sound" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="56dp" android:text="@string/setting_sound" />
    <CheckBox android:id="@+id/setting_large_text" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="56dp" android:text="@string/setting_large_text" />
    <CheckBox android:id="@+id/setting_high_contrast" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="56dp" android:text="@string/setting_high_contrast" />
    <CheckBox android:id="@+id/setting_reduce_motion" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="56dp" android:text="@string/setting_reduce_motion" />
    <CheckBox android:id="@+id/setting_notifications" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="56dp" android:text="@string/setting_notifications" />
    <CheckBox android:id="@+id/setting_detailed_announcements" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="56dp" android:text="@string/setting_detailed_announcements" />
</LinearLayout>
